@@ -1,6 +1,8 @@
 ChangeLog for the Astro project.
 
 20200117:
+	* make calibration faster by moving simultanously
+	* add configuration keys for hot pixel detection and calibration
 	* set default servicename equal to the hostname
 	* add a default configuration database that already contains
 	  the SIMULATOR instrumetn
